2010-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/i386/pc/startup.S (grub_getrtsecs): Removed (dead code).

2010-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/pc/init.h (grub_get_mmap_entry): Don't export.
	* conf/i386-pc.rmk (kernel_img_HEADERS): Remove machine/init.h.

2010-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove unused grub_vga_get_font.

	* kern/i386/pc/startup.S (grub_vga_get_font): Removed.
	* include/grub/i386/pc/vga.h (grub_vga_get_font): Likewise.

2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* kern/misc.c: Disable the __enable_execute_stack hack for utilities.
	* include/grub/misc.h: Likewise.

2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-install.in: Add `|| exit 1' to all grub-probe calls
	for which failure is fatal.

2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-install.in: Use mkdir -p to create grub directory.
	* util/i386/efi/grub-install.in: Likewise.
	* util/ieee1275/grub-install.in: Likewise.

2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* Makefile.in (LEX): new variable.

2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/i386/efi/grub-dumpdevtree: replaced the non-portable `==' by
	`=' and added double quotes on operands of this equality test.

2010-04-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (uninstall): Remove a leftover debug echo.
	Reported by: Grégoire Sutre

2010-04-03  Vladimir Serbinenko  <phcoder@gmail.com>

	MIPS multiboot2 support.

	* conf/mips.rmk (pkglib_MODULES): Add multiboot2.mod.
	(multiboot2_mod_SOURCES): New variable.
	(multiboot2_mod_CFLAGS): Likewise.
	(multiboot2_mod_LDFLAGS): Likewise.
	(multiboot2_mod_ASFLAGS): Likewise.
	* include/grub/i386/multiboot.h (MULTIBOOT_INITIAL_STATE): New
	definition.
	(MULTIBOOT_ENTRY_REGISTER): Likewise.
	(MULTIBOOT_MBI_REGISTER): Likewise.
	(MULTIBOOT_ARCHITECTURE_CURRENT): Likewise.
	(MULTIBOOT_ELF32_MACHINE): Likewise.